# django-fmft

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  db.sqlite3  dev_requirements.txt  manage.py  old_setup.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pytest.yaml  release.yaml
demo/: fmft_fixture.json  settings.py  views.py
demo/migrations/: 0001_initial.py
demo/templates/extra_views/: base.html
demo/templates/fmft/tests/: filtered_model_formset.html  filtered_model_formset_table.html  filtered_table.html  model_formset_table.html
demo/views/: __init__.py  fmft.py
docs/: MODULES.md  Makefile  conf.py  installation.md  installation.rst  make.bat  requirements_docs.txt  usage.rst
docs/source/: MODULES.md  README_REF.md  authors.md  conf.py  contributing.md  example_views.md  history.md  index.md
docs/sphinx/: HISTORY.md  README.md  README_OLD.md  conf.py  example_views_old.md  index.rst
fmft/: __init__.py  formset_tables.py  utils.py  views.py
fmft/templates/fmft/: filter_form.html  filtered_formset.html  filtered_formset_table.html  filtered_table.html  form_field.html  form_fields.html  form_non_field_errors_tr.html  formset_table.html  tabular_formset.html
fmft_tests/: filters.py  fmft_fixture.json  forms.py  manage.py  settings.py  tables.py  test_fmft.py  urls.py
fmft_tests/migrations/: 0001_initial.py
fmft_tests/templates/fmft/: form_field.html
fmft_tests/views/: extra_views.py  fmft.py
tasks/: __init__.py  clean.py  deps.py  docs.py  pypi.py
tests/: __init__.py  test_fmft.py
