[build-system]
requires = ["setuptools", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = 'django-fmft'
description = "Class-based Views that integrate django-filters and django-tables2 with model formsets."
readme = "README.md"
authors = [
    {name = 'powderflask', email = 'powderflask@gmail.com' }
]
maintainers = [
    {name = 'powderflask', email = 'powderflask@gmail.com' }
]
keywords = ['fmft',]
license = {text = "MIT license"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
]
requires-python = '>=3.9, <4.0'
dynamic = ['version',]
dependencies = [
    'django >= 2.0',
    'django-extra-views >= 0.14.0',
    'django-filter >= 23.2',
    'django-tables2 >= 2.6.0',
    'typing-extensions ~= 4.6.3',
    'pip-tools ~= 6.13.0',
]

[project.optional-dependencies]
dev = [
    'bumpver >= 2023.1124',
    'build >= 0.10.0',
    'invoke >= 2.1.3',
    'click >= 8.1',
    ]
lint = [
    'flake8 >= 6.0.0',
    'black >= 23.3.0',
]
docs = [
    'sphinx >= 7.0.1',
    'myst-parser >= 2.0.0',
    'sphinx_rtd_theme >= 1.2.2'
]
test = [
    'pytest-cov >= 4.1.0',
    'pytest-django >= 4.5.2',
    'tox >= 4.5.1',
]

[project.urls]
Homepage = 'https://github.com/powderflask/fmft'
Repository = 'https://github.com/powderflask/fmft'

[project.scripts]
'manage.py' = 'fmft_tests:django_manage'

[tool.bumpver]
current_version = '0.1.1'
version_pattern = 'MAJOR.MINOR.PATCH'
commit_message = 'Version bump: {old_version} -> {new_version}'
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [ "current_version = \"{version}\"",]
'README.md' = [ "Version: {version}",]
'fmft/__init__.py' = [ "__version__ = \"{version}\"",]
'docs/sphinx/conf.py' = [ "release = '{version}'",]

[tool.setuptools]
py-modules = [
    'fmft',
]

[tool.setuptools.dynamic.version]
attr = 'fmft.__version__'
