# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_fmft"
version = "0.3.1"
requires-python = ">=3.8, <4.0"
description = "Class-based Views that integrate django-filters and django-tables2 with model formsets."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Joseph Fall", email = "powderflask@gmail.com" }
]
keywords = [
    "django_fmft",
    "Django Filtered Model Formset",
    "Tabular Class-based Views",
    "django-filter",
    "django-tables2",
    "django-extra-views",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
dependencies = [
    "django",
    "django-filter",
    "django-tables2",
    "django-extra-views",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinxcontrib_django",
]
style = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]
test = [
    "tox",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
    "pip-tools",
]

[project.urls]
Homepage = "https://github.com/powderflask/django-fmft"
Repository = "https://github.com/powderflask/django-fmft"

[project.scripts]
"manage.py" = "django_fmft:django_manage"


# Other Tools
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["fmft", "fmft.*"]

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"fmft/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ['version = "{version}"', 'release = "{version}"']

[tool.black]
target-version = ["py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true
